# FieldAreaSegmentation

./: README.md
pq_score_compute/: README.md  pq_caluculate.py  pyproject.toml
submittion_validator/: README.md  pyproject.toml  validator.py
