[tool.poetry]
name = "submittion-validator"
version = "0.1.0"
description = "to validate submittion file for field area competition"
authors = ["torumitsutake <torumitsutake@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
